--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.less">
+    <link rel="stylesheet/less" type="text/css" href="css/style.less" />
     <title>Joomag task</title>
 </head>
 <body>  
@@ -89,7 +90,7 @@
              </div> 
             <div class="col-sm-2 gallery-item">
              <a href="#galleryImg1" class="link-gallery" data-toggle="modal" data-target="#modalGallery">
-              <img src="assets/warner-brothers.svg" style="width: 200px;height:100px" class="img-responsive img-gallery" alt="Third image">
+              <img src="assets/Vector Smart Object-pdf.svg" style="width: 200px;height:100px" class="img-responsive img-gallery" alt="Third image">
                </a>
               </div>
               <div class="col-sm-2 gallery-item">
@@ -109,7 +110,7 @@
        <!-- WeWork -->
        <div class="container-fluid weWork">
         <div class="container">
-          <div class="row sec2">
+          <div class="row sec3">
             <div class="col-sm-12">
              <h2 class="text-center list">
              Exclusive WeWork Offer
@@ -214,5 +215,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <script src="js/script.js"> </script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </body>
 </html>
